# anthropic-sdk-rs

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
anthropic-ai-sdk/: Cargo.toml  README.md
anthropic-ai-sdk/src/: admin_client.rs  client.rs  files.rs  messages.rs
anthropic-ai-sdk/src/types/: files.rs  message.rs  model.rs
anthropic-ai-sdk/src/types/admin/: api_keys.rs  invites.rs  mod.rs  users.rs  workspace_members.rs  workspaces.rs
examples/admin/api-keys/get-api-key/: Cargo.toml
examples/admin/api-keys/get-api-key/src/: main.rs
examples/admin/api-keys/list-api-keys/: Cargo.toml
examples/admin/api-keys/update-api-key/: Cargo.toml
examples/admin/organization-invites/create-invite/: Cargo.toml
examples/admin/organization-invites/create-invite/src/: main.rs
examples/admin/organization-invites/delete-invite/: Cargo.toml
examples/admin/organization-invites/delete-invite/src/: main.rs
examples/admin/organization-invites/get-invite/: Cargo.toml
examples/admin/organization-invites/get-invite/src/: main.rs
examples/admin/organization-invites/list-invites/: Cargo.toml
examples/admin/organization-invites/list-invites/src/: main.rs
examples/admin/organization-member-management/get-user/: Cargo.toml
examples/admin/organization-member-management/get-user/src/: main.rs
examples/admin/organization-member-management/list-users/: Cargo.toml
examples/admin/organization-member-management/list-users/src/: main.rs
examples/admin/organization-member-management/remove-user/: Cargo.toml
examples/admin/organization-member-management/remove-user/src/: main.rs
examples/admin/organization-member-management/update-user/: Cargo.toml
examples/admin/organization-member-management/update-user/src/: main.rs
examples/admin/workspace-management/archive-workspace/: Cargo.toml
examples/admin/workspace-management/archive-workspace/src/: main.rs
examples/admin/workspace-management/create-workspace/: Cargo.toml
examples/admin/workspace-management/create-workspace/src/: main.rs
examples/admin/workspace-management/get-workspace/: Cargo.toml
examples/admin/workspace-management/get-workspace/src/: main.rs
examples/admin/workspace-management/list-workspaces/: Cargo.toml
examples/admin/workspace-management/list-workspaces/src/: main.rs
examples/admin/workspace-management/update-workspace/: Cargo.toml
examples/admin/workspace-management/update-workspace/src/: main.rs
examples/admin/workspace-member-management/add-workspace-member/: Cargo.toml
examples/admin/workspace-member-management/add-workspace-member/src/: main.rs
examples/admin/workspace-member-management/delete-workspace-member/: Cargo.toml
examples/admin/workspace-member-management/delete-workspace-member/src/: main.rs
examples/admin/workspace-member-management/get-workspace-member/: Cargo.toml
examples/admin/workspace-member-management/get-workspace-member/src/: main.rs
examples/admin/workspace-member-management/list-workspace-members/: Cargo.toml
examples/admin/workspace-member-management/list-workspace-members/src/: main.rs
examples/admin/workspace-member-management/update-workspace-member/: Cargo.toml
examples/admin/workspace-member-management/update-workspace-member/src/: main.rs
examples/files/delete-file/: Cargo.toml
examples/files/delete-file/src/: main.rs
examples/files/download-file/: Cargo.toml
examples/files/download-file/src/: main.rs
examples/files/get-file-metadata/: Cargo.toml
examples/files/get-file-metadata/src/: main.rs
examples/files/list-files/: Cargo.toml
examples/files/list-files/src/: main.rs
examples/files/upload-file/: Cargo.toml
examples/files/upload-file/src/: main.rs
examples/message-batches/cancel-a-message-batch/: Cargo.toml
examples/message-batches/cancel-a-message-batch/src/: main.rs
examples/message-batches/create-a-message-batch/: Cargo.toml
examples/message-batches/delete-a-message-batch/: Cargo.toml
examples/message-batches/list-message-batches/: Cargo.toml
examples/message-batches/retrieve-message-batch/: Cargo.toml
examples/message-batches/retrieve-message-batch-results/: Cargo.toml
examples/messages/count-message-tokens/: Cargo.toml
examples/messages/count-message-tokens/src/: main.rs
examples/messages/messages/: Cargo.toml
examples/messages/messages/src/: main.rs
examples/messages/stream-messages/: Cargo.toml
examples/messages/stream-messages/src/: main.rs
examples/models/get-a-model/: Cargo.toml
examples/models/get-a-model/src/: main.rs
examples/models/list-models/: Cargo.toml
