[workspace]
members = [
    "anthropic-ai-sdk",
    "examples/messages/count-message-tokens",
    "examples/messages/messages",
    "examples/messages/stream-messages",
    "examples/models/list-models",
    "examples/models/get-a-model",
    "examples/message-batches/create-a-message-batch",
    "examples/message-batches/list-message-batches",
    "examples/message-batches/retrieve-message-batch",
    "examples/message-batches/retrieve-message-batch-results",
    "examples/message-batches/cancel-a-message-batch",
    "examples/message-batches/delete-a-message-batch",
    "examples/admin/api-keys/list-api-keys",
    "examples/admin/api-keys/get-api-key",
    "examples/admin/api-keys/update-api-key",
    "examples/admin/organization-member-management/get-user",
    "examples/admin/organization-member-management/list-users",
    "examples/admin/workspace-management/get-workspace",
    "examples/admin/workspace-management/list-workspaces",
]
default-members = ["anthropic-ai-sdk"]
resolver = "2"
