[workspace]
members = [
    "anthropic-ai-sdk",
    "examples/messages/count-message-tokens",
    "examples/messages/messages",
    "examples/messages/stream-messages",
    "examples/models/list-models",
    "examples/models/get-a-model",
    "examples/message-batches/create-a-message-batch",
    "examples/message-batches/list-message-batches",
    "examples/message-batches/retrieve-message-batch",
    "examples/message-batches/retrieve-message-batch-results",
    "examples/message-batches/cancel-a-message-batch",
    "examples/message-batches/delete-a-message-batch",
    "examples/admin/api-keys/list-api-keys",
    "examples/admin/api-keys/get-api-key",
    "examples/admin/api-keys/update-api-key",
    "examples/admin/organization-member-management/get-user",
    "examples/admin/organization-member-management/list-users",
    "examples/admin/organization-member-management/remove-user",
    "examples/admin/workspace-management/get-workspace",
    "examples/admin/workspace-management/list-workspaces",
    "examples/admin/workspace-member-management/get-workspace-member",
    "examples/admin/workspace-member-management/list-workspace-members",
    "examples/admin/workspace-member-management/add-workspace-member",
    "examples/admin/organization-invites/get-invite",
    "examples/admin/organization-invites/list-invites",
]
default-members = ["anthropic-ai-sdk"]
resolver = "2"
